--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   # Setting an environment variable with the value of a configuration variable
-  downloadurl: ${{ vars.DOWNLOADURL }}
+  downloadurl: 'https://zip.baipiao.eu.org'
 
 permissions:
   contents: write
